Alteração diretorio das imgs Mapa

--- a/mapa.html
+++ b/mapa.html
@@ -146,7 +146,7 @@ laus.bindPopup(`
 filipov.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Filipov</strong>
-        <img src="../images/nossa_Senhora_de_Filipov.jpg" alt="Nossa Senhora de Filipov" style="width: 80px; height: auto; margin: 5px 0;"/>
+        <img src="../images/nossa_Senhora_Auxiliadora.jpg" alt="Nossa Senhora de Filipov" style="width: 80px; height: auto; margin: 5px 0;"/>
         <a href='detalhes.html?id=11' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
 `);
@@ -154,7 +154,7 @@ filipov.bindPopup(`
 pontmain.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Pontmain</strong>
-        <img src="../images/nossa_Senhora_de_Pontmain.jpg" alt="Nossa Senhora de Pontmain" style="width: 80px; height: auto; margin: 5px 0;"/>
+        <img src="../images/nossa_Senhora_de_Pontmain.png" alt="Nossa Senhora de Pontmain" style="width: 80px; height: auto; margin: 5px 0;"/>
         <a href='detalhes.html?id=12' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
 `);
@@ -170,7 +170,7 @@ gietrzwald.bindPopup(`
 knock.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Knock</strong>
-        <img src="../images/nossa_Senhora_de_Knock.jpg" alt="Nossa Senhora de Knock" style="width: 80px; height: auto; margin: 5px 0;"/>
+        <img src="../images/nossa_Senhora_do_Silencio.png" alt="Nossa Senhora de Knock" style="width: 80px; height: auto; margin: 5px 0;"/>
         <a href='detalhes.html?id=14' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
 `);
@@ -178,7 +178,7 @@ knock.bindPopup(`
 sprimont.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Sprimont</strong>
-        <img src="../images/nossa_Senhora_de_Sprimont.jpg" alt="Nossa Senhora de Sprimont" style="width: 80px; height: auto; margin: 5px 0;"/>
+        <img src="../images/nossa_Senhora_dos_Pobres.jpg" alt="Nossa Senhora de Sprimont" style="width: 80px; height: auto; margin: 5px 0;"/>
         <a href='detalhes.html?id=15' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
 `);
