Pequena alteração no texto introdutório

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id = "google_translate_element"></div>
         <br>
         <h3 class = "tdr">Seja bem-vindo à exposição das aparições marianas!</h3>
-        <p class = "tdr"> O objetivo principal deste site é expor e fazer conhecidas todas as aparições marianas registradas aprovadas pelo Vaticano até hoje! Além disso, principalmente nos tempos que vivemos, torna-se necessário a divulgação da devoção à Virgem Maria, mãe de Deus, para recrutarmos novos soldados para o exército de Maria!</p>
+        <p class = "tdr"> O objetivo principal deste site é expor e fazer conhecidas todas as aparições marianas registradas aceitas pelo Vaticano até hoje! Além disso, principalmente nos tempos que vivemos, torna-se necessário a divulgação da devoção à Virgem Maria, mãe de Deus, para recrutarmos novos soldados para o exército de Maria!</p>
         <p> Dessa maneira, podemos contribuir ativamente para o cumprimento da profecia feita no livro do
         Gênesis 3,15: "Porei ódio entre ti e a mulher, entre a tua descendência e a dela.
         Esta te ferirá a cabeça, e tu ferirás o calcanhar" </p>
