--- a/mapa.html
+++ b/mapa.html
@@ -21,9 +21,12 @@
     <header>
         <br>
         <ul style="list-style-type:none;">
-            <li><a href="index.html" class="headerOptions"><h5 style="color: rgb(24, 24, 24);"><b>Início</b></h5></a></li>
-            <li><a href="aparicoes.html" class="headerOptions"><h5 style="color: rgb(24, 24, 24);"><b>Lista das aparições</b></h5></a></li>
-            <li><a href="referencias.html" class="headerOptions"><h5 style="color: rgb(24, 24, 24);"><b>Referências</b></h5></a></li>
+            <li><a href="index.html" class="headerOptions">
+                    <h5 style="color: rgb(24, 24, 24);"><b>Início</b></h5></a></li>
+            <li><a href="aparicoes.html" class="headerOptions">
+                    <h5 style="color: rgb(24, 24, 24);"><b>Lista das aparições</b></h5></a></li>
+            <li><a href="referencias.html" class="headerOptions">
+                    <h5 style="color: rgb(24, 24, 24);"><b>Referências</b></h5></a></li>
         </ul>
         <br>
         <h2 style="text-align: center; color: rgb(20, 20, 20); font-weight: bold;">Mapa das aparições</h2>
@@ -34,36 +37,36 @@
         </p>
         <br>
     </header>
-    
+
     <div id="map" style="height: 76vh;">
     </div>
 
-        <script>
-            let map = L.map("map").setView([37.61, -122.011], 10);
+    <script>
+        let map = L.map("map").setView([37.61, -122.011], 10);
 
-            L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
-                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
-                maxZoom: 20
-            }).addTo(map);
+        L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+            maxZoom: 20
+        }).addTo(map);
 
-            let zaragoza = L.marker([41.65691789582794, -0.8784745815454716]).addTo(map);
-let fatima = L.marker([39.63127532153284, -8.67315218237831]).addTo(map);
-let paris = L.marker([48.8507837896766, 2.322977305335615]).addTo(map);
-let lourdes = L.marker([43.097591421611256, -0.05870591965005861]).addTo(map);
-let sallete = L.marker([44.858628447045405, 5.9788064683618805]).addTo(map);
-let guadalupe = L.marker([19.486295968151012, -99.11516255158693]).addTo(map);
-let roma = L.marker([41.9036323895654, 12.483507672900426]).addTo(map);
-let lezajsk = L.marker([50.27051261458389, 22.408678702070706]).addTo(map);
-let siluva = L.marker([55.53061539541645, 23.21991247309754]).addTo(map);
-let laus = L.marker([44.52122093284419, 6.152105467908496]).addTo(map);
-let filipov = L.marker([50.81140894824067, 14.397622437454045]).addTo(map);
-let pontmain = L.marker([48.43959793253507, -1.0591001100132138]).addTo(map);
-let gietrzwald = L.marker([53.74804270191199, 20.23549536565065]).addTo(map);
-let knock = L.marker([53.7920679235046, -8.91752977714699]).addTo(map);
-let sprimont = L.marker([50.54089244870204, 5.73888739060881]).addTo(map);
+        let zaragoza = L.marker([41.65691789582794, -0.8784745815454716]).addTo(map);
+        let fatima = L.marker([39.63127532153284, -8.67315218237831]).addTo(map);
+        let paris = L.marker([48.8507837896766, 2.322977305335615]).addTo(map);
+        let lourdes = L.marker([43.097591421611256, -0.05870591965005861]).addTo(map);
+        let sallete = L.marker([44.858628447045405, 5.9788064683618805]).addTo(map);
+        let guadalupe = L.marker([19.486295968151012, -99.11516255158693]).addTo(map);
+        let roma = L.marker([41.9036323895654, 12.483507672900426]).addTo(map);
+        let lezajsk = L.marker([50.27051261458389, 22.408678702070706]).addTo(map);
+        let siluva = L.marker([55.53061539541645, 23.21991247309754]).addTo(map);
+        let laus = L.marker([44.52122093284419, 6.152105467908496]).addTo(map);
+        let filipov = L.marker([50.81140894824067, 14.397622437454045]).addTo(map);
+        let pontmain = L.marker([48.43959793253507, -1.0591001100132138]).addTo(map);
+        let gietrzwald = L.marker([53.74804270191199, 20.23549536565065]).addTo(map);
+        let knock = L.marker([53.7920679235046, -8.91752977714699]).addTo(map);
+        let sprimont = L.marker([50.54089244870204, 5.73888739060881]).addTo(map);
+        let kibeho = L.marker([-2.649596629509676, 29.55328894843863]).addTo(map);
 
-
-zaragoza.bindPopup(`
+        zaragoza.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora do Pilar</strong>
         <img src="../images/nossa_Senhora_Pilar.png" alt="Nossa Senhora do Pilar" style="width: 80px; height: auto; margin: 5px 0;"/>
@@ -71,7 +74,7 @@ zaragoza.bindPopup(`
     </div>
 `);
 
-fatima.bindPopup(`
+        fatima.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Fátima</strong>
         <img src="../images/nossa_Senhora_fatima.png" alt="Nossa Senhora de Fátima" style="width: 80px; height: auto; margin: 5px 0;"/>
@@ -79,7 +82,7 @@ fatima.bindPopup(`
     </div>
 `);
 
-paris.bindPopup(`
+        paris.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora das Graças</strong>
         <img src="../images/nossa_Senhora_das_gracas.jpg" alt="Nossa Senhora das Graças" style="width: 80px; height: auto; margin: 5px 0;"/>
@@ -87,7 +90,7 @@ paris.bindPopup(`
     </div>
 `);
 
-lourdes.bindPopup(`
+        lourdes.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Lourdes</strong>
         <img src="../images/nossa_Senhora_Lourdes.png" alt="Nossa Senhora de Lourdes" style="width: 80px; height: auto; margin: 5px 0;"/>
@@ -95,7 +98,7 @@ lourdes.bindPopup(`
     </div>
 `);
 
-sallete.bindPopup(`
+        sallete.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de La Salette</strong>
         <img src="../images/nossa_Senhora_LaSalette.jpg" alt="Nossa Senhora de La Salette" style="width: 80px; height: auto; margin: 5px 0;"/>
@@ -103,7 +106,7 @@ sallete.bindPopup(`
     </div>
 `);
 
-guadalupe.bindPopup(`
+        guadalupe.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Guadalupe</strong>
         <img src="../images/nossa_Senhora_de_Guadalupe.jpg" alt="Nossa Senhora de Guadalupe" style="width: 80px; height: auto; margin: 5px 0;"/>
@@ -111,7 +114,7 @@ guadalupe.bindPopup(`
     </div>
 `);
 
-roma.bindPopup(`
+        roma.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Sion</strong>
         <img src="../images/nossa_Senhora_de_Sion.jpg" alt="Nossa Senhora de Sion" style="width: 80px; height: auto; margin: 5px 0;"/>
@@ -119,15 +122,15 @@ roma.bindPopup(`
     </div>
 `);
 
-lezajsk.bindPopup(`
+        lezajsk.bindPopup(`
     <div style="display: grid;place-items: center;">
-        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Leżajsk</strong>
+        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora da Consolação de Leżajsk</strong>
         <img src="../images/nossa_Senhora_da_Consolacao.jpg" alt="Nossa Senhora de Leżajsk" style="width: 80px; height: auto; margin: 5px 0;"/>
         <a href='detalhes.html?id=8' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
 `);
 
-siluva.bindPopup(`
+        siluva.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Šiluva</strong>
         <img src="../images/nossa_Senhora_de_Siluva.jpg" alt="Nossa Senhora de Šiluva" style="width: 80px; height: auto; margin: 5px 0;"/>
@@ -135,7 +138,7 @@ siluva.bindPopup(`
     </div>
 `);
 
-laus.bindPopup(`
+        laus.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Laus</strong>
         <img src="../images/nossa_Senhora_de_Laus.jpg" alt="Nossa Senhora de Laus" style="width: 80px; height: auto; margin: 5px 0;"/>
@@ -143,23 +146,23 @@ laus.bindPopup(`
     </div>
 `);
 
-filipov.bindPopup(`
+        filipov.bindPopup(`
     <div style="display: grid;place-items: center;">
-        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Filipov</strong>
+        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora Auxiliadora dos Cristãos</strong>
         <img src="../images/nossa_Senhora_Auxiliadora.jpg" alt="Nossa Senhora de Filipov" style="width: 80px; height: auto; margin: 5px 0;"/>
         <a href='detalhes.html?id=11' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
 `);
 
-pontmain.bindPopup(`
+        pontmain.bindPopup(`
     <div style="display: grid;place-items: center;">
-        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Pontmain</strong>
+        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora da Esperança de Pontmain</strong>
         <img src="../images/nossa_Senhora_de_Pontmain.png" alt="Nossa Senhora de Pontmain" style="width: 80px; height: auto; margin: 5px 0;"/>
         <a href='detalhes.html?id=12' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
 `);
 
-gietrzwald.bindPopup(`
+        gietrzwald.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Gietrzwałd</strong>
         <img src="../images/nossa_Senhora_de_Gietrzwald.jpg" alt="Nossa Senhora de Gietrzwałd" style="width: 80px; height: auto; margin: 5px 0;"/>
@@ -167,27 +170,35 @@ gietrzwald.bindPopup(`
     </div>
 `);
 
-knock.bindPopup(`
+        knock.bindPopup(`
     <div style="display: grid;place-items: center;">
-        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Knock</strong>
+        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora do Silêncio</strong>
         <img src="../images/nossa_Senhora_do_Silencio.png" alt="Nossa Senhora de Knock" style="width: 80px; height: auto; margin: 5px 0;"/>
         <a href='detalhes.html?id=14' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
 `);
 
-sprimont.bindPopup(`
+        sprimont.bindPopup(`
     <div style="display: grid;place-items: center;">
-        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Sprimont</strong>
+        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora dos Pobres</strong>
         <img src="../images/nossa_Senhora_dos_Pobres.jpg" alt="Nossa Senhora de Sprimont" style="width: 80px; height: auto; margin: 5px 0;"/>
         <a href='detalhes.html?id=15' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
 `);
+  
+        kibeho.bindPopup(`
+    <div style="display: grid;place-items: center;">
+        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Kibeho</strong>
+        <img src="../images/nossa_Senhora_de_Kibeho.jpg" alt="Nossa Senhora de Kibeho" style="width: 80px; height: auto; margin: 5px 0;"/>
+        <a href='detalhes.html?id=16' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
+    </div>
+`);
 
-
-        </script>
+    </script>
 
     <script type="text/javascript" src="/scripts/traducao.js"></script>
-    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript"
+        src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 
 </html>
