Três links adicionados

--- a/referencias.html
+++ b/referencias.html
@@ -48,6 +48,9 @@
       <a href="https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/473/102/" target="_blank">https://cruzterrasanta.com.br/historia-de-nossa-senhora-do-pilar/</a>
       <br>
       <br>
+      <a href="https://arquisp.org.br/liturgia/santo-do-dia/nossa-senhora-do-pilar" target="_blank">https://arquisp.org.br/liturgia/santo-do-dia/nossa-senhora-do-pilar</a>
+      <br>
+      <br>
       <a href="https://santo.cancaonova.com/santo/nossa-senhora-de-lourdes-intercessora-dos-doentes/#:~:text=Foi%20no%20ano%20de%201858,leituras%20de%2011%20de%20fevereiro." target="_blank">https://santo.cancaonova.com/santo/nossa-senhora-de-lourdes/</a>
       <br>
       <br>
@@ -111,7 +114,13 @@
       <a href="https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-dos-pobres" target="_blank">https://www.exercitoimaculada.com.br/aparições-de-nossa-senhora/n-s-dos-pobres</a>
       <br>
       <br>
-      <a href="https://hijosdemaria.mensajerosdivinos.org/pt-br/cnsp/icone-de-nossa-senhora-dos-pobres" target="_blank">https://hijosdemaria.mensajerosdivinos.org/pt-br/cnsp/icone-de-nossa-senhora-dos-pobres</a>  
+      <a href="https://hijosdemaria.mensajerosdivinos.org/pt-br/cnsp/icone-de-nossa-senhora-dos-pobres" target="_blank">https://hijosdemaria.mensajerosdivinos.org/pt-br/cnsp/icone-de-nossa-senhora-dos-pobres</a> 
+      <br>
+      <br>
+      <a href="https://santinhoz.com.br/nossa-senhorinha-de-kibeho/" target="_blank">https://santinhoz.com.br/nossa-senhorinha-de-kibeho/</a>
+      <br>
+      <br>
+      <a href="https://bibliotecacatolica.com.br/blog/destaques/nossa-senhora-de-kibeho/?srsltid=AfmBOoplDT9jmTDIGFd0W1594j3WqiH9taVSmAepKzY9LfHm3KlCC8sM" target="_blank">https://bibliotecacatolica.com.br/blog/destaques/nossa-senhora-de-kibeho/</a>
       </article>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
