Aparição de Nossa Senhora de Beauraing adicionada

--- a/mapa.html
+++ b/mapa.html
@@ -65,7 +65,8 @@
         let knock = L.marker([53.7920679235046, -8.91752977714699]).addTo(map);
         let sprimont = L.marker([50.54089244870204, 5.73888739060881]).addTo(map);
         let kibeho = L.marker([-2.649596629509676, 29.55328894843863]).addTo(map);
-
+        let beauraing = L.marker([50.10868955514343, 4.960959318047037]).addTo(map);
+         
         zaragoza.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora do Pilar</strong>
@@ -193,6 +194,14 @@
         <a href='detalhes.html?id=16' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
 `);
+
+        beauraing.bindPopup(`
+    <div style="display: grid;place-items: center;">
+        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Beauraing</strong>
+        <img src="../images/nossa_Senhora_de_Beauraing.jpg" alt="Nossa Senhora de Beauraing" style="width: 80px; height: auto; margin: 5px 0;"/>
+        <a href='detalhes.html?id=17' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
+    </div>
+`); 
 
     </script>
 
