Aparição de Nossa Senhora de Cimbres adicionada

--- a/mapa.html
+++ b/mapa.html
@@ -66,7 +66,8 @@
         let sprimont = L.marker([50.54089244870204, 5.73888739060881]).addTo(map);
         let kibeho = L.marker([-2.649596629509676, 29.55328894843863]).addTo(map);
         let beauraing = L.marker([50.10868955514343, 4.960959318047037]).addTo(map);
-         
+        let cimbres = L.marker([-8.362591112203372, -36.811647526437966]).addTo(map);
+
         zaragoza.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora do Pilar</strong>
@@ -201,7 +202,16 @@
         <img src="../images/nossa_Senhora_de_Beauraing.jpg" alt="Nossa Senhora de Beauraing" style="width: 80px; height: auto; margin: 5px 0;"/>
         <a href='detalhes.html?id=17' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
-`); 
+`);
+
+        cimbres.bindPopup(`
+    <div style="display: grid;place-items: center;">
+        <strong style="color: black; font-size: 1.2em;">Aparição de Nossa Senhora de Cimbres</strong>
+        <img src="../images/nossa_Senhora_de_Cimbres.jpg" alt="Nossa Senhora de Cimbres" style="width: 80px; height: auto; margin: 5px 0;"/>
+        <a href='detalhes.html?id=18' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
+    </div>
+`);
+   
 
     </script>
 
