--- a/referencias.html
+++ b/referencias.html
@@ -136,6 +136,12 @@
       <br>
       <br>
       <a href="https://paroquia-nsa-sra-das-montanhas.webnode.page/sobre-nos/#:~:text=Afastai%20de%20nós%20a%20corrupção,Assim%20Seja%2C%20Amém." target="_blank">https://paroquia-nsa-sra-das-montanhas.webnode.page/sobre-nos/nossa_senhora_das_montanhas</a>
+      <br>
+      <br>
+      <a href="https://santo.cancaonova.com/santo/nossa-senhora-aparecida-a-rainha-e-padroeira-do-brasil/" target="_blank">https://santo.cancaonova.com/santo/nossa-senhora-aparecida-a-rainha-e-padroeira-do-brasil/</a>
+      <br>
+      <br>
+      <a href="https://bibliotecacatolica.com.br/blog/devocao/a-historia-de-nossa-senhora-aparecida/?srsltid=AfmBOoouAH_YkzrupWRtBBkeZ9TxVlxPg8DQJXFqSXi8jA2A9__Ewb6_" target="_blank">https://bibliotecacatolica.com.br/blog/devocao/a-historia-de-nossa-senhora-aparecida/</a>
       </article>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
