Novo link adicionado

--- a/referencias.html
+++ b/referencias.html
@@ -142,6 +142,9 @@
       <br>
       <br>
       <a href="https://bibliotecacatolica.com.br/blog/devocao/a-historia-de-nossa-senhora-aparecida/?srsltid=AfmBOoouAH_YkzrupWRtBBkeZ9TxVlxPg8DQJXFqSXi8jA2A9__Ewb6_" target="_blank">https://bibliotecacatolica.com.br/blog/devocao/a-historia-de-nossa-senhora-aparecida/</a>
+      <br>
+      <br>
+      <a href="https://bibliotecacatolica.com.br/blog/devocao/a-historia-de-nossa-senhora-do-rosario/?srsltid=AfmBOorhpr9O4-BThh5n0cvPKPa2m40ZLik-ZnCJ7BO0A0IS1oUhzaLw" target="_blank">https://bibliotecacatolica.com.br/blog/devocao/a-historia-de-nossa-senhora-do-rosario/</a>
       </article>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
