--- a/mapa.html
+++ b/mapa.html
@@ -68,6 +68,7 @@
         let beauraing = L.marker([50.10868955514343, 4.960959318047037]).addTo(map);
         let cimbres = L.marker([-8.362591112203372, -36.811647526437966]).addTo(map);
         let aparecida = L.marker([-22.850523513151785, -45.23372607208304]).addTo(map);
+        let toulouse = L.marker([43.60419680756814, 1.442341930309915]).addTo(map);
 
         zaragoza.bindPopup(`
     <div style="display: grid;place-items: center;">
@@ -220,7 +221,14 @@
         <a href='detalhes.html?id=19' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
 `);
-   
+
+        toulouse.bindPopup(`
+    <div style="display: grid;place-items: center;">
+        <strong style="color: black; font-size: 1.2em;">Nossa Senhora do Rosário</strong>
+        <img src="../images/nossa_Senhora_do_Rosario.jpg" alt="Nossa Senhora do Rosário" style="width: 80px; height: auto; margin: 5px 0;"/>
+        <a href='detalhes.html?id=20' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
+    </div>
+`);
 
     </script>
 
