--- a/mapa.html
+++ b/mapa.html
@@ -225,7 +225,7 @@
         toulouse.bindPopup(`
     <div style="display: grid;place-items: center;">
         <strong style="color: black; font-size: 1.2em;">Nossa Senhora do Rosário</strong>
-        <img src="../images/nossa_Senhora_do_Rosario.jpg" alt="Nossa Senhora do Rosário" style="width: 80px; height: auto; margin: 5px 0;"/>
+        <img src="../images/nossa_Senhora_do_Rosario.JPG" alt="Nossa Senhora do Rosário" style="width: 80px; height: auto; margin: 5px 0;"/>
         <a href='detalhes.html?id=20' class='btnSaibaMais'">Clique aqui para obter mais detalhes</a>
     </div>
 `);
