Contador de visitas ao site adicionado à página inicial

--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
         <p>Página desenvolvida por: <a href="https://github.com/thiagolutes" target="_blank">Thiago Lutes</a> e <a href="https://github.com/PauloHenrique2" target="_blank">Paulo Henrique Resende Vianna</a>, inspirada no site sobre os Milagres Eucarísticos criado pelo Beato Carlo Acutis:
         <a href="http://www.miracolieucaristici.org/en/Liste/list.html" target="_blank">link para o site</a></p>
       </article>
-      
+      <div class = "head">
+         <p>Contagem de visitantes:</p>
+         <div class="website-counter">
+           <i class="fa fa-eye"></i>
+         </div>
+        </div>
+      <script type="text/javascript" src="scripts/web-site-counter.js"></script>
       <script type="text/javascript" src="/scripts/traducao.js"></script>
       <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
